changed html skill description

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <img class="html-img skills-img" src="images/html.png" alt="" />
           <div class="html skills-text">
             <h3>HTML</h3>
-            <p>I am at a beginner level.</p>
+            <p>Uses HTML to create and format websites for projects.</p>
           </div>
 
           <img class="css-img skills-img" src="images/css.png" alt="" />
@@ -81,7 +81,9 @@
         <i class="fab fa-linkedin icon"></i>
         LinkedIn
       </a>
-      <a class="footer-link" href="index.html">Website</a>
+      <a class="footer-link" href="https://sophiegcollin.github.io/Portfolio/"
+        >Website</a
+      >
       <p class="copy-right">© 2019 Sophie Collin.</p>
     </div>
 
