--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img class="pro-pic" src="images/IMG_1655.JPG" alt="" />
+        <img class="pro-pic" src="images/IMG_1655.png" alt="" />
         <h2>Hello.</h2>
         <p class="intro">
           My name is Sophie Collin and I am a programmer. In my spare time I
@@ -47,19 +47,30 @@
           <img class="html-img skills-img" src="images/html.png" alt="" />
           <div class="html skills-text">
             <h3>HTML</h3>
-            <p>Uses HTML to create and format websites for projects.</p>
+            <p>
+              Uses HTML to define the structure and content for websites. These
+              elements are the building blocks of any website based project of
+              mine.
+            </p>
           </div>
 
           <img class="css-img skills-img" src="images/css.png" alt="" />
           <div class="css skills-text">
             <h3>CSS</h3>
-            <p>I am at a beginner level.</p>
+            <p>
+              Uses CSS to style the elements of my websites. Using CSS makes
+              stylizing and maintenance up keep for projects more efficient.
+            </p>
           </div>
 
           <img class="js-img skills-img" src="images/file.png" alt="" />
           <div class="js skills-text">
             <h3>JS</h3>
-            <p>I am at a beginner level.</p>
+            <p>
+              Uses JS to change the elements of my HTML and CSS stylesheet.
+              Adapting design across multiple browsers and devises, adding
+              functionality.
+            </p>
           </div>
         </div>
       </div>
