--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
     </div>
 
     <div class="bottom-container">
-      <a class="linkedIn-link" href="https://www.linkedin.com/">
+      <a
+        class="linkedIn-link"
+        href="https://www.linkedin.com/in/sophie-collin-a2aa28192/"
+      >
         <i class="fab fa-linkedin icon"></i>
         LinkedIn
       </a>
